k8s/aut-sys/apps/http-whoami/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels: &labels
    app.kubernetes.io/name: whoami
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      priorityClassName: custom-low
      containers:
        - name: whoami
          image: docker.io/traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: "1m"
            limits:
              memory: "10Mi"
