k8s/aut-sys/apps/http-whoami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels: &labels
    app.kubernetes.io/name: whoami
spec:
  selector: *labels
  ports:
    - name: web
      port: 80
      targetPort: web
